# Core2048

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  update_version.sh
Core2048/: Core2048.h
Core2048/include/: Block.h  Core2048_Utils.h  GameCore.h  IValuesGenerator.h  PresetValuesGenerator.h
Core2048/src/: GameCore.cpp  PresetValuesGenerator.cpp
docs/: CHANGELOG.txt  mainpage.dox  site_info
include/: Block.h  Core2048.h  Core2048_Utils.h  GameCore.h  IValuesGenerator.h  PresetValuesGenerator.h
qt_creator/: Game_2048.files  Game_2048.includes
resources/: values.txt
scripts/: download-dependencies.sh  update_version.sh
site_info/: info
src/: Block.cpp  GameCore.cpp  PresetValuesGenerator.cpp
test_game/: main.cpp
